--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
             <figure class="team-member">
               <picture class="team-member__img">
-                <source srcset="./images/our-team/igor-demyanenko_product-designer_450x460.jpg" media="(max-width: 767px)">
+                <source srcset="./images/our-team/igor-demyanenko_product-designer_450x460@1x.jpg" media="(max-width: 767px)">
                 <img  src="./images/our-team/igor-demyanenko_product-designer_270x260.jpg" alt="Игорь Демьяненко" width="270" height="260" />
               </picture>
               <figcaption class="team-member__info">
