--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <ul class="team-member-socials">
                   <li class="team-member-socials__item">
 
-                    <a href="#" class="socials-link">
+                    <a href="#" class="socials-link socials-link--primary">
                       <span class="visually-hidden">instagram</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-instagram"></use>
@@ -243,7 +243,7 @@
                   </li>
                   <li class="team-member-socials__item">
 
-                    <a href="" class="socials-link">
+                    <a href="" class="socials-link socials-link--primary">
                       <span class="visually-hidden">twitter</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-twitter"></use>
@@ -253,7 +253,7 @@
                   </li>
                   <li class="team-member-socials__item">
 
-                    <a href="" class="socials-link">
+                    <a href="" class="socials-link socials-link--primary">
                       <span class="visually-hidden">facebook</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-facebook"></use>
@@ -263,7 +263,7 @@
                   </li>
                   <li class="team-member-socials__item">
 
-                    <a href="" class="socials-link">
+                    <a href="" class="socials-link socials-link--primary">
                       <span class="visually-hidden">linkedin</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-linkedin"></use>
@@ -303,7 +303,7 @@
                 <ul class="team-member-socials">
                   <li class="team-member-socials__item">
 
-                    <a href="#" class="socials-link">
+                    <a href="#" class="socials-link socials-link--primary">
                       <span class="visually-hidden">instagram</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-instagram"></use>
@@ -313,7 +313,7 @@
                   </li>
                   <li class="team-member-socials__item">
 
-                    <a href="" class="socials-link">
+                    <a href="" class="socials-link socials-link--primary">
                       <span class="visually-hidden">twitter</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-twitter"></use>
@@ -323,7 +323,7 @@
                   </li>
                   <li class="team-member-socials__item">
 
-                    <a href="" class="socials-link">
+                    <a href="" class="socials-link socials-link--primary">
                       <span class="visually-hidden">facebook</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-facebook"></use>
@@ -333,7 +333,7 @@
                   </li>
                   <li class="team-member-socials__item">
 
-                    <a href="" class="socials-link">
+                    <a href="" class="socials-link socials-link--primary">
                       <span class="visually-hidden">linkedin</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-linkedin"></use>
@@ -375,7 +375,7 @@
                 <ul class="team-member-socials">
                   <li class="team-member-socials__item">
 
-                    <a href="#" class="socials-link">
+                    <a href="#" class="socials-link socials-link--primary">
                       <span class="visually-hidden">instagram</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-instagram"></use>
@@ -385,7 +385,7 @@
                   </li>
                   <li class="team-member-socials__item">
 
-                    <a href="" class="socials-link">
+                    <a href="" class="socials-link socials-link--primary">
                       <span class="visually-hidden">twitter</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-twitter"></use>
@@ -395,7 +395,7 @@
                   </li>
                   <li class="team-member-socials__item">
 
-                    <a href="" class="socials-link">
+                    <a href="" class="socials-link socials-link--primary">
                       <span class="visually-hidden">facebook</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-facebook"></use>
@@ -405,7 +405,7 @@
                   </li>
                   <li class="team-member-socials__item">
 
-                    <a href="" class="socials-link">
+                    <a href="" class="socials-link socials-link--primary">
                       <span class="visually-hidden">linkedin</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-linkedin"></use>
@@ -444,7 +444,7 @@
                 <ul class="team-member-socials">
                   <li class="team-member-socials__item">
 
-                    <a href="#" class="socials-link">
+                    <a href="#" class="socials-link socials-link--primary">
                       <span class="visually-hidden">instagram</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-instagram"></use>
@@ -454,7 +454,7 @@
                   </li>
                   <li class="team-member-socials__item">
 
-                    <a href="" class="socials-link">
+                    <a href="" class="socials-link socials-link--primary">
                       <span class="visually-hidden">twitter</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-twitter"></use>
@@ -464,7 +464,7 @@
                   </li>
                   <li class="team-member-socials__item">
 
-                    <a href="" class="socials-link">
+                    <a href="" class="socials-link socials-link--primary">
                       <span class="visually-hidden">facebook</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-facebook"></use>
@@ -474,7 +474,7 @@
                   </li>
                   <li class="team-member-socials__item">
 
-                    <a href="" class="socials-link">
+                    <a href="" class="socials-link socials-link--primary">
                       <span class="visually-hidden">linkedin</span>
                       <svg class="socials-icon socials-icon--dark">
                         <use href="./images/icons.svg#icon-small-icon-linkedin"></use>
@@ -595,7 +595,7 @@
         <ul class="studio-socials">
           <li class="studio-socials__item">
 
-            <a href="#" class="social-link social-link--dark">
+            <a href="#" class="socials-link socials-link--dark">
               <span class="visually-hidden">instagram</span>
               <svg class="socials-icon socials-icon--light">
                 <use href="./images/icons.svg#icon-small-icon-instagram"></use>
@@ -605,7 +605,7 @@
           </li>
           <li class="studio-socials__item">
 
-            <a href="" class="social-link social-link--dark">
+            <a href="" class="socials-link socials-link--dark">
               <span class="visually-hidden">twitter</span>
               <svg class="socials-icon socials-icon--light">
                 <use href="./images/icons.svg#icon-small-icon-twitter"></use>
@@ -615,7 +615,7 @@
           </li>
           <li class="studio-socials__item">
 
-            <a href="" class="social-link social-link--dark">
+            <a href="" class="socials-link socials-link--dark">
               <span class="visually-hidden">facebook</span>
               <svg class="socials-icon socials-icon--light">
                 <use href="./images/icons.svg#icon-small-icon-facebook"></use>
@@ -625,7 +625,7 @@
           </li>
           <li class="studio-socials__item">
 
-            <a href="" class="social-link social-link--dark">
+            <a href="" class="socials-link socials-link--dark">
               <span class="visually-hidden">linkedin</span>
               <svg class="socials-icon socials-icon--light">
                 <use href="./images/icons.svg#icon-small-icon-linkedin"></use>
@@ -682,7 +682,7 @@
           <a href="./portfolio.html" class="mobile-nav__link">Портфолио</a>
         </li>
         <li class="mobile-nav__item">
-          <a href="#" class="mobile-nav__link">Котакты</a>
+          <a href="#" class="mobile-nav__link">Контакты</a>
         </li>
       </ul>
     </nav>
